    cases of a coxph model curve.  More work remains to be done to
    return the std for all cases.
    \item Add a paragraph to the help page for survfit.Rd, pointing out
    that robust variance is now the default for interval censored data,
    and why.
    \item Add the median.survfit method
    \item Improve the examples in pseudo.Rd
}}

\section{Changes in version 3.2-15}{
  \itemize{
    \item Fix an inconsistency with the start.time argument.  One of
    the survfit paths would include an event at start.time (curve starts
    with an immediate drop) others did not.  All paths now do so. This
    makes start.time=0 behave the same as ordinary survfit, without the
    argument, when there is a death at time 0.
}}

\section{Changes in version 3.2-14}{
  \itemize{
    \item Update the royston function to report the scaled Cox-Snell
    R-squared as the Nagelkirke estimate, and clarify the documentation.
    \item Update for coxph with ties=exact, for the case of an infinite
    coefficient where the information matrix becomes singular.  Code for
    this case had been developed for coxfit6.c (Breslow/Efron) but not
    replicated in coxexact.c
}}
 
\section{Changes in version 3.2-13}{
  \itemize{
    \item Clarify some sentences in tmerge help file.
    \item Fix a memory access error in concordance3.c, found by CRAN.
    \item Add the drop.special function (internal) to work around offset
    problems in [.terms.
}}
\section{Changes in version 3.2-12}{
  \itemize{
    \item Avoid a downstream error from infinte coefficients in
    coxph.  In special case it would fail by passing an NA to C code.
    \item The df column from cox.zph could be incorrect for a coxme
    model.
    \item cox.zph would crash for a coxme model whose random effect
    contained a factor (odd issue with model.frame).
    \item yates error for a coxph model with a strata * covariate
    interaction
    \item Clarify documentation for the royston command.